increased overlay size to fix board being visible

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -154,7 +154,7 @@ body {
 .one-player-or-two {
   background: $plyr-qty-choice-bg;
   color: $wht;
-  height: 100vh;
+  height: 120vh;
   left: 0;
   position: absolute;
   top: 0;
@@ -197,7 +197,7 @@ body {
 .choose-symbol {
   background: $plyr-symbol-choice-bg;
   color: $wht;
-  height: 100vh;
+  height: 120vh;
   left: 0;
   position: absolute;
   top: 0;
